--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -52,5 +52,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp" />
         </RelativeLayout>
+
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="25dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-5486013930231502/3895488304">
+        </com.google.android.gms.ads.AdView>
     </RelativeLayout>
 </ScrollView>
