--- a/app/src/main/res/layout/activity_exams.xml
+++ b/app/src/main/res/layout/activity_exams.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".GradeActivity"
+    tools:context=".ExamsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,7 +40,7 @@
 
             <TextView
                 android:id = "@+id/txt_page"
-                android:text = "@string/popup_grades"
+                android:text = "@string/page_exams"
                 android:textSize = "@dimen/dp_20"
                 android:textColor="@color/colorAccent"
                 android:layout_width = "wrap_content"
@@ -82,6 +82,6 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/dp_10"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-5486013930231502/6439776035" />
+            ads:adUnitId="ca-app-pub-5486013930231502/9744596221" />
     </RelativeLayout>
 </ScrollView>
