--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -1,69 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-    xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:tools = "http://schemas.android.com/tools"
-    tools:context = ".FileActivity"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FileActivity"
     android:layout_width="match_parent"
-    android:layout_height = "match_parent" >
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height = "match_parent">
-
-        <ImageButton
-            android:id="@+id/back"
-            android:src="@drawable/icon_back"
-            android:background="@null"
-            android:layout_width="33dp"
-            android:layout_height="33dp"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp" />
-
-        <TextView
-            android:id = "@+id/page"
-            android:text = "@string/pg_files"
-            android:textSize = "20dp"
-            android:textColor="@color/colorAccent"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:layout_alignBottom="@+id/back"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp" />
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:id="@+id/layout"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height = "match_parent"
-            android:layout_below="@+id/back"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/bg_headline"
+                android:src="@drawable/bg_headline"
+                android:scaleType="fitEnd"
+                android:adjustViewBounds="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@+id/center"
+                android:layout_alignBottom="@+id/divider_top" />
+
+            <ImageButton
+                android:id="@+id/button_back"
+                android:src="@drawable/icon_back"
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:layout_width="@dimen/dp_25"
+                android:layout_height="@dimen/dp_25"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginLeft="@dimen/dp_10" />
+
+            <TextView
+                android:id = "@+id/txt_page"
+                android:text = "@string/popup_files"
+                android:textSize = "@dimen/dp_20"
+                android:textColor="@color/colorAccent"
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:layout_alignBottom="@+id/button_back"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_10" />
+
+            <View
+                android:id="@+id/divider_top"
+                android:background="@color/colorPrimaryDark"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_5"
+                android:layout_below="@+id/button_back"
+                android:layout_marginTop="@dimen/dp_10" />
+
+            <View
+                android:id="@+id/center"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerHorizontal="true" />
 
             <ProgressBar style="@style/Base.Widget.AppCompat.ProgressBar"
-                android:id="@+id/spinner"
+                android:id="@+id/progress"
                 android:visibility="visible"
                 android:indeterminate="true"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp" />
+                android:layout_below="@id/divider_top"
+                android:layout_marginTop="@dimen/dp_10" />
         </RelativeLayout>
 
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layout"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_10"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-5486013930231502/3895488304">
-        </com.google.android.gms.ads.AdView>
+            ads:adUnitId="ca-app-pub-5486013930231502/7408231019" />
     </RelativeLayout>
 </ScrollView>
