--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:tools = "http://schemas.android.com/tools"
-    tools:context = ".SplashActivity"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".SplashActivity"
     android:layout_width="match_parent"
-    android:layout_height = "match_parent">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/logo"
-        android:src="@drawable/icon_logo_white"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/pic_logo"
+        android:src="@drawable/icon_logo"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
+        android:layout_width="@dimen/dp_100"
+        android:layout_height="@dimen/dp_100"
         android:layout_centerInParent="true" />
 </RelativeLayout>
