--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -99,6 +99,29 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/dp_15" />
 
+            <ImageView
+                android:id="@+id/pic_user_avatar"
+                android:src="@drawable/avatar_x"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:layout_width="@dimen/dp_10"
+                android:layout_height="@dimen/dp_10"
+                android:layout_below="@+id/txt_mail"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_10" />
+
+            <TextView
+                android:id="@+id/txt_user_shares"
+                android:text="@string/hint_default"
+                android:textSize="@dimen/dp_10"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccentDark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txt_mail"
+                android:layout_alignRight="@id/pic_user_avatar"
+                android:layout_marginRight="@dimen/dp_15" />
+
             <View
                 android:id="@+id/divider_bottom"
                 android:background="@color/colorPrimaryDark"
